BookBox display changes

--- a/client/src/components/BookBox/BookBox.css
+++ b/client/src/components/BookBox/BookBox.css
@@ -6,9 +6,9 @@
   margin-bottom: .15rem;
 }
 
-.level-item{
+/* .level-item{
   justify-content: left;
-}
+} */
 
 @media screen and (max-width: 768px) {
 
