--- a/client/src/components/Form/UpdateForm.css
+++ b/client/src/components/Form/UpdateForm.css
@@ -8,18 +8,18 @@ h1 { font-size: 1.5em; margin: 10px; } */
   color: #000000 !important;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+/* ::-webkit-input-placeholder {
   color: #000000;
 }
-::-moz-placeholder { /* Firefox 19+ */
+::-moz-placeholder { 
   color: #000000;
 }
-:-ms-input-placeholder { /* IE 10+ */
+:-ms-input-placeholder { 
   color: #000000;
 }
-:-moz-placeholder { /* Firefox 18- */
+:-moz-placeholder { 
   color: #000000;
-}
+} */
 
 /****** Style Star Rating Widget *****/
 
