--- a/client/src/pages/Books/Books.css
+++ b/client/src/pages/Books/Books.css
@@ -13,7 +13,9 @@
 } */
 
  .g-image {
-  border-radius: 5%;
+  border-radius: 50%;
+  max-height: 128px;
+  border: 3px solid #fff;
 } 
 
 .books-read {
@@ -40,8 +42,6 @@
   position: absolute;
   right: .05em;
   top: .05em;
-  
-  /* margin-left: 10px; */
 }
 
 .un-bookmark-span{
@@ -57,46 +57,83 @@
   position: relative;
 }
 
-.finished-books {
-  border: 4px solid #ffffff;
-  border-radius:4px;
-  padding: 5px 5px 5px 5px;
+.name-title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.top-of-profile {
+  margin-bottom: 5% !important;
+}
+
+.bottom-of-profile {
+  border-top: 3px solid #fff
+}
+
+.books-read-number {
+  margin-top: 30%;
+}
+
+/* .completed-tile {
+  margin: 0px 10px 0px 10px;
+} */
+
+.max-me {
+  overflow:hidden !important;
 }
 
 
-@media screen and (min-width: 450px) and (max-width: 768px) {
+@media screen and (min-width: 100px) and (max-width: 374px) {
   .name-title {
-    font-size: 2rem !important;
+    font-size: 1.5rem !important;
   }
   .books-read-title {
     font-size: 1.25rem !important;
   }
-}
-
-
-
-
-
-@media screen and (max-width: 1080px) {
-  .tile.is-8 {
-    width: 100%;
-  }
-  .tile {
-    width: 100%;
-  }
-  .is-ancestor {
-    flex-wrap: wrap;
+  .g-image {
+    height: 80px;
   }
 }
 
-@media screen and (max-width: 414px) {
-  .tile.is-8 {
-    width: 100%;
+@media screen and (min-width: 375px) and (max-width: 414px) {
+  .name-title {
+    font-size: 1.5rem !important;
   }
-  .tile {
-    width: 100%;
+  .books-read-title {
+    font-size: 1.25rem !important;
   }
-  .is-ancestor {
-    flex-wrap: wrap;
+  .g-image {
+    height: 100px;
+  }
+}
+
+@media screen and (min-width: 415px) and (max-width: 768px) {
+  .name-title {
+    font-size: 2rem !important;
+  }
+  .books-read-title {
+    font-size: 1.75rem !important;
+  }
+  .g-image {
+    height: 180px;
+  }
+}
+
+
+@media screen and (min-width: 769px) and (max-width: 1094px) {
+  .name-title {
+    font-size: 1.25rem !important;
+  }
+  .g-image {
+    height: 80px;
+  }
+  .heading {
+    font-size: .5em;
+  }
+  .bookbox-title {
+    font-size: .75em;
+  }
+  .tile-title, .title > .icon {
+    font-size: 1.5rem !important;
   }
 }
